style/general.css
:root {
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(209, 187, 61);
}

tr:nth-child(2n) {
    background-color: aqua;
}

tr:nth-child(2n - 1) {
    background-color: red;
}

.hidden {
    display: none;
}

.data-list * {
    height: 50px;
}

header {
    text-align: center;
}

.data-list {
    transition-duration: 10ms;
}

.animateBox {
    display: block;
    animation-iteration-count: 1;
    animation-name: boxAnimation;
    animation-play-state: running;
    animation-duration: 1s;
    animation-timing-function: ease-out;
    animation-delay: 0s;
}

span button,
form button {
    color: black;
    background-color: rgb(127, 223, 140);
    padding: 10px 20px;
    border-radius: 6px;
}

#creditButton {
    color: black;
    /* position: absolute;
    right: 120px;
    top: 240px; */
    background-color: rgb(127, 223, 140);
    padding: 10px 20px;
    border-radius: 6px;
}

button {
    border-radius: 10px;
}
tr td {
    text-align: center;
}

tr .year{
    padding-left: 15px;
    padding-right: 15px;
}

#creditPanel {
    display: none;
    position: absolute;
    left: 5px;
    top: 150px;
    background-color: rgba(233, 146, 233, 0.925);
    border: 1px solid black;
    padding: 10px;
    border-radius: 10px;
    height: 150px;
}

#playlistPanelAdd {
    display: none;
    position: absolute;
    right: 120px;
    top: 250px;
    background-color: rgba(84, 216, 84, 0.842);
    border: 1px solid black;
    padding: 10px;
    border-radius: 10px;
}

#playlistPanelRemove {
    display: none;
    position: absolute;
    right: 120px;
    top: 250px;
    background-color: rgba(157, 84, 216, 0.842);
    border: 1px solid black;
    padding: 10px;
    border-radius: 10px;
}

#formTitle {
    font-weight: bold;
    font-size: larger;
    position: relative;
    left: 50px;
}

#labelOne {
    padding-right: 20px;
}

#labelTwo {
    padding-right: 15px;
}

#labelThree {
    padding-right: 8px;
}

.formDiv {
    padding-bottom: 10px;
}

.container {
    display: flex;
    height: 100%;
}

body {
    display: flexbox;
    height: 100%;
    margin: 0;
}

#leftDiv {
    width: 135px;
    /* Adjust the width as needed */
    height: 17280px;
    /* Adjust the height as needed */
    padding: 20px;
    background-color: #ccc;
    background-image: url("../images/SpeakerImage2.png"); /*https://www.shutterstock.com/image-photo/speakers-front-view-on-white-background-2112095705*/
    background-repeat: repeat-y;
    padding-right: 10px;
}

#parentDiv {
    align-items: center;
    justify-content: center;
    display: flex;
}

#centerDiv {
    width: 90%;
    justify-content: center;
}

#rightDiv {
    justify-content: flex-center;
    width: 135px;
    /* Adjust the width as needed */
    height: 17280px;
    /* Adjust the height as needed */
    background-color: #ccc;
    background-image: url("../images/SpeakerImage2.png"); /*https://www.shutterstock.com/image-photo/speakers-front-view-on-white-background-2112095705*/
    background-repeat: repeat-y;
    padding: 20px;
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
    padding-left: 10px;
}
canvas {
    background-color: rgba(236, 162, 50, 0.6);
}

@keyframes boxAnimation {
    0% {
        opacity: 0;
    }
    100% {
        transform: scale(1);
    }
}

@media screen and (max-width: 920px) {}

